--- a/reactmessagingv1.fe/package.json
+++ b/reactmessagingv1.fe/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-refresh": "^0.14.0",
+    "react-rnd": "^10.4.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
