--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /ReactMessagingV1.Api/appsettings.json
+/FrostFlow.API/appsettings.json
